# simpleTaskManager

./: CMakeLists.txt  README.md
include/: simpleTaskManager.h
src/: addTask.c  choiceFun.c  main.c  menu.c  removeTask.c  taskManager.c  taskManager.h  viewTask.c
